--- a/index.html
+++ b/index.html
@@ -3,25 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrador da Rifa Solidária</title>
+    <title>Rifa Solidária - Concorra a um Violão Tagima</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        .login-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+        /* Estilos para o pop-up de login */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.4);
             justify-content: center;
-            height: 100vh;
-            text-align: center;
+            align-items: center;
         }
-        .login-container input {
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 400px;
+            text-align: center;
+            border-radius: 10px;
+            position: relative;
+        }
+        
+        .modal-content input {
             padding: 10px;
             margin-top: 10px;
+            width: 80%;
             border: 1px solid #ccc;
             border-radius: 5px;
-            width: 250px;
         }
-        .login-container button {
+
+        .modal-content button {
             padding: 10px 20px;
             margin-top: 15px;
             background-color: #4CAF50;
@@ -30,28 +51,77 @@
             border-radius: 5px;
             cursor: pointer;
         }
-        .login-container button:hover {
-            background-color: #45a049;
+        
+        .close-button {
+            color: #aaa;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        /* Estilos para o botão de login no cabeçalho */
+        .login-button {
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 24px;
+            position: absolute;
+            right: 20px;
+            top: 20px;
+            color: #d9534f;
         }
     </style>
 </head>
 <body>
 
-    <div id="login-screen" class="login-container">
-        <h2>Área do Administrador</h2>
-        <p>Insira a senha para continuar:</p>
-        <input type="password" id="password-input" placeholder="Digite a senha">
-        <button id="login-button">Entrar</button>
-    </div>
+    <header class="header">
+        <div class="header-info">
+            <h1>Rifa Solidária</h1>
+            <p>Concorra a um **Violão Tagima Mahogany Elétrico Nylon**</p>
+        </div>
+        <div class="header-price">
+            <p>Cada número vale</p>
+            <span>R$ 20,00</span>
+        </div>
+        <button id="show-login-modal" class="login-button">&#128100;</button> </header>
 
-    <main id="admin-content" class="main-content" style="display: none;">
+    <main class="main-content">
+        <section class="buy-info">
+            <h2>Quer participar?</h2>
+            <p>Compre seu número agora mesmo!</p>
+            <div class="contact-info">
+                <p><strong>WhatsApp:</strong> [Seu WhatsApp]</p>
+                <p><strong>Instagram:</strong> [Seu Instagram]</p>
+                <p><strong>Chave para Pagamento:</strong> 34999893400</p>
+            </div>
+            <p class="raffle-date">Data do sorteio: **A definir**</p>
+        </section>
+
         <section class="raffle-grid">
+            <h2>Números da Rifa</h2>
             <div id="grid-container" class="grid-container">
                 </div>
         </section>
     </main>
 
-    <script src="admin.js"></script>
+    <footer class="footer">
+        <p>&copy; 2025 Rifa Solidária. Todos os direitos reservados.</p>
+    </footer>
+
+    <div id="login-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2>Login de Administrador</h2>
+            <p>Insira a senha para marcar os números:</p>
+            <input type="password" id="password-input" placeholder="Digite a senha">
+            <button id="login-button">Entrar</button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
