--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rifa Solidária - Concorra a um Violão Tagima</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <style>
         /* Estilos para o pop-up de login */
@@ -24,7 +25,6 @@
 
         .modal-content {
             background-color: #fefefe;
-            margin: auto;
             padding: 20px;
             border: 1px solid #888;
             width: 80%;
@@ -63,15 +63,23 @@
         }
 
         /* Estilos para o botão de login no cabeçalho */
-        .login-button {
+        .login-button, .logout-button {
             background: none;
             border: none;
             cursor: pointer;
             font-size: 24px;
             position: absolute;
             right: 20px;
-            top: 20px;
             color: #d9534f;
+        }
+        
+        .login-button {
+            top: 20px;
+        }
+
+        .logout-button {
+            top: 60px;
+            display: none;
         }
     </style>
 </head>
@@ -79,6 +87,7 @@
 
     <header class="header">
         <div class="header-info">
+            <img src="http://googleusercontent.com/image_generation_content/1" alt="Violão Tagima Mahogany" class="guitar-image">
             <h1>Rifa Solidária</h1>
             <p>Concorra a um **Violão Tagima Mahogany Elétrico Nylon**</p>
         </div>
@@ -86,18 +95,31 @@
             <p>Cada número vale</p>
             <span>R$ 20,00</span>
         </div>
-        <button id="show-login-modal" class="login-button">&#128100;</button> </header>
+        <button id="show-login-modal" class="login-button"><i class="fas fa-user-circle"></i></button>
+        <button id="logout-button" class="logout-button"><i class="fas fa-sign-out-alt"></i></button>
+    </header>
 
     <main class="main-content">
         <section class="buy-info">
             <h2>Quer participar?</h2>
             <p>Compre seu número agora mesmo!</p>
             <div class="contact-info">
-                <p><strong>WhatsApp:</strong> [Seu WhatsApp]</p>
-                <p><strong>Instagram:</strong> [Seu Instagram]</p>
-                <p><strong>Chave para Pagamento:</strong> 34999893400</p>
+                <a href="https://wa.me/5534999893400" target="_blank" class="contact-link whatsapp">
+                    <i class="fab fa-whatsapp"></i> WhatsApp
+                </a>
+                <a href="https://www.instagram.com/ebertpimenta" target="_blank" class="contact-link instagram">
+                    <i class="fab fa-instagram"></i> @ebertpimenta
+                </a>
+                <span id="copy-pix-button" class="contact-link pix">
+                    <i class="fas fa-qrcode"></i> Chave Pix (Celular)
+                </span>
             </div>
             <p class="raffle-date">Data do sorteio: **A definir**</p>
+        </section>
+
+        <section class="status-info">
+            <p>Números Disponíveis: <strong id="disponiveis">0</strong></p>
+            <p>Números Vendidos: <strong id="vendidos">0</strong></p>
         </section>
 
         <section class="raffle-grid">
