--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <header class="header">
         <div class="header-info">
-            <img src="http://googleusercontent.com/image_generation_content/1" alt="Violão Tagima Mahogany" class="guitar-image">
+            <img src="violao.jpg" alt="Violão Tagima Mahogany" class="guitar-image">
             <h1>Rifa Solidária</h1>
             <p>Concorra a um **Violão Tagima Mahogany Elétrico Nylon**</p>
         </div>
