--- a/index.html
+++ b/index.html
@@ -86,18 +86,20 @@
 <body>
 
     <header class="header">
-        <div class="header-info">
+        <div class="header-main">
             <img src="violao.jpg" alt="Violão Tagima Mahogany" class="guitar-image">
-            <h1>Rifa Solidária</h1>
-            <p>Concorra a um **Violão Tagima Mahogany Elétrico Nylon**</p>
+            <div class="header-text">
+                <h1>Rifa Solidária</h1>
+                <p>Concorra a um **Violão Tagima Mahogany Elétrico Nylon**</p>
+                <div class="status-info">
+                    <p>Números Vendidos: <strong id="vendidos">0</strong></p>
+                    <p>Números Disponíveis: <strong id="disponiveis">0</strong></p>
+                </div>
+            </div>
         </div>
         <div class="header-price">
             <p>Cada número vale</p>
             <span>R$ 20,00</span>
-        </div>
-        <div class="status-info">
-            <p>Números Vendidos: <strong id="vendidos">0</strong></p>
-            <p>Números Disponíveis: <strong id="disponiveis">0</strong></p>
         </div>
         <div class="contact-info">
             <a href="https://wa.me/5534999893400" target="_blank" class="contact-link whatsapp" title="WhatsApp">
