--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             <a href="https://www.instagram.com/ebertpimenta" target="_blank" class="contact-link instagram" title="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
-            <span id="copy-pix-button" class="contact-link pix" title="Copiar Chave Pix">
-                <i class="fas fa-qrcode"></i>
+            <span id="copy-pix-button" class="contact-link pix" title="Copiar Chave Pix" style="display: inline-flex; align-items: center; cursor: pointer;">
+<img src="pix_icone.png" alt="Ícone Pix" style="height: 1.5em; width: auto; vertical-align: middle; margin-right: 5px;">
             </span>
         </div>
         <button id="show-login-modal" class="login-button"><i class="fas fa-user-circle"></i></button>
