--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Esio Lima. Todos os direitos reservados.</p>
+        <p>&copy; 2025 - Todos os direitos reservados.</p>
     </footer>
 
     <div id="login-modal" class="modal">
