--- a/index.html
+++ b/index.html
@@ -99,10 +99,9 @@
                     <p>Números Disponíveis: <strong id="disponiveis">0</strong></p>
                 </div>
             </div>
-        </div>
         <div class="header-price">
-            <p>Cada número vale</p>
-            <span>R$ 20,00</span>
+        <p>Valor da rifa: <span>R$ 20,00</span></p>
+        <p>Sorteio: Marcaremos a data</p>
         </div>
         <div class="contact-info">
             <a href="https://wa.me/5534999893400" target="_blank" class="contact-link whatsapp" title="WhatsApp">
