--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
         <div class="header-price">
         <p>Valor da rifa: <span>R$ 20,00</span></p>
-        <p>Sorteio: Marcaremos a data</p>
+        <p>Sorteio: 20/09/25</p>
         </div>
         <div class="contact-info">
             <a href="https://wa.me/5534999893400" target="_blank" class="contact-link whatsapp" title="WhatsApp">
